Fix dropdown
Header text causes arrow to misalign if screen too thin. Fixed by scaling down header font.

--- a/assets/modules/dropdown/dropdown.css
+++ b/assets/modules/dropdown/dropdown.css
@@ -33,7 +33,7 @@ dropdown-box .header h3 {
 	text-align: left;
 	flex: 1 1 auto;
 	font-weight: 700;
-	font-size: 24px;
+	font-size: 1.5em;
 }
 dropdown-box .header svg {
 	vertical-align: bottom;
